--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack",
-    "start": "webpack-dev-server"
+    "build": "webpack --config config/prod.env.js",
+    "dev": "webpack-dev-server --config config/dev.env.js"
   },
   "repository": {
     "type": "git",
@@ -23,14 +23,12 @@
     "webpack": "^3.10.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
-    "img-loader": "^2.0.0",
-    "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.1.6",
-    "url-loader": "^0.6.2",
     "webpack-dev-server": "^2.9.7"
   }
 }
