--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "js-sdk",
   "version": "1.0.0",
   "description": "Bmob SDK",
-  "main": "index.js",
+  "main": "./src/lib/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config config/prod.env.js",
@@ -24,9 +24,6 @@
     "webpack": "^3.10.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "html-webpack-plugin": "^2.30.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
