--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config config/prod.env.js",
+    "watch": "webpack --watch --config config/prod.env.js",
     "dev": "webpack-dev-server --config config/dev.env.js"
   },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bmob/bmob-js-sdk-es6"
