--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-sdk",
+  "name": "hydrogen-js-sdk",
   "version": "1.4.0",
   "description": "Bmob SDK",
   "main": "./src/lib/app.js",
@@ -9,10 +9,9 @@
     "watch": "webpack --watch --config config/prod.env.js",
     "dev": "webpack-dev-server --config config/dev.env.js"
   },
-
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bmob/hydrogen-js-sdk"
+    "url": "git+https://github.com/bmob/hydrogen-js-sdk.git"
   },
   "author": "Bmob",
   "license": "ISC",
@@ -23,12 +22,18 @@
   "dependencies": {
     "axios": "^0.18.0",
     "node.extend": "^2.0.0",
-    "webpack": "^3.10.0"
+    "webpack": "^3.12.0"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^0.1.17",
+    "clean-webpack-plugin": "^0.1.19",
     "html-webpack-plugin": "^2.30.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "webpack-dev-server": "^2.9.7"
-  }
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack-dev-server": "^2.11.2"
+  },
+  "directories": {
+    "doc": "docs"
+  },
+  "keywords": [
+    "Bmob"
+  ]
 }
