--- a/package.json
+++ b/package.json
@@ -26,6 +26,14 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.1.0",
     "html-webpack-plugin": "^2.30.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-dev-server": "^2.11.2"
