--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "homepage": "https://github.com/bmob/hydrogen-js-sdk#readme",
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "node.extend": "^2.0.0",
     "webpack": "^3.12.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "eslint": "^4.19.1",
