--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-dev-server": "^2.11.2"
   },
+  "typings": "./index.d.ts",
   "directories": {
     "doc": "docs"
   },
