--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "hydrogen-js-sdk",
   "version": "2.2.1",
   "description": "Bmob SDK",
-  "main": "./src/lib/app.js",
+  "main": "./index.js",
+  "typings": "./index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config config/prod.env.js",
@@ -42,7 +43,6 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-dev-server": "^2.11.2"
   },
-  "typings": "./index.d.ts",
   "directories": {
     "doc": "docs"
   },
