--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "test-c": "jest --coverage"
   },
   "dependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.4",
+    "@babel/core": "^7.14.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-typescript": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/parser": "^4.26.1",
     "babel-jest": "^27.0.2",
+    "core-js": "^3.14.0",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-livereload": "^2.0.0",
