--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hydrogen-js-sdk",
-  "version": "2.4.0",
+  "version": "2.4.1",
   "description": "本SDK基于es6开发，致力打造基于前端混合开发需求，支持微信小程序、H5、快应用、游戏Cocos、混合App等平台, 整个SDK，就dist目录下Bmob.*.js 这个文件即可使用全部功能，请使用最新版本。",
   "main": "./index.js",
   "typings": "./index.d.ts",
@@ -22,8 +22,7 @@
   "homepage": "https://github.com/bmob/hydrogen-js-sdk#readme",
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "node.extend": "^2.0.0",
-    "webpack": "^3.12.0"
+    "node.extend": "^2.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -41,6 +40,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "html-webpack-plugin": "^2.30.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.2"
   },
   "directories": {
